tests/baselines/reference/objectDestructuringInSwitch1.errors.txt
objectDestructuringInSwitch1.ts(11,15): error TS2339: Property 'prop' does not exist on type 'never'.


==== objectDestructuringInSwitch1.ts (1 errors) ====
    type X = { kind: "a", a: { prop: 1 } } | { kind: "b", a: {} }
    
    function foo(x: X): 1 {
      const { kind, a } = x;
      switch (kind) {
        case "a":
          return a.prop;
        case "b":
          return 1;
        default:
          const { prop } = a;
                  ~~~~
!!! error TS2339: Property 'prop' does not exist on type 'never'.
          return a;
      }
    }